--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.7",
     "babel-preset-es2015": "^6.24.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.6",
     "next-images": "^1.4.0",
     "react": "16.13.1",
