--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
+    "aos": "^2.3.4",
     "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.7",
     "babel-preset-es2015": "^6.24.1",
@@ -20,6 +21,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-swipeable-views": "^0.13.9",
+    "sweetalert": "^2.1.2",
     "swiper": "^5.3.8"
   }
 }
